# cxx-mindblowing

./: .gitignore
concurrency/: call_once.cxx  conditional_variable_usage.cxx  future_usage.cxx  hello_world.cxx  mutex_usage.cxx  post_c++11_trick_maestro_init.cxx  promise_usage.cxx  rvo-nrvo.cxx  shared_future_usage.cxx  shared_mutex_usage.cxx  spinlock_mutex.cxx  thread_guard.cxx  threadsafe_queue.cxx
core/: c++98_pseudo_support_of_const_iter.cxx  constexpr_funcs_over_years.cxx  delete_over_private_undeclared.cxx  esoteric_final_override.cxx  insidious_shared_this.cxx  move_not_guarantees_to_move.cxx
functional/: avg_score.cxx  bind_to_lightweight_lambda.cxx  bind_usage.cxx  call_on_object.cxx  count_lines.cxx  count_team_members.cxx  counting_team_members.cxx  curried_greater.cxx  curried_member.cxx  error_test_t.cxx  expected.cxx  fib_cache.cxx  foldl_accum.cxx  function_lift.cxx  generic_lambda.cxx  inheritace_sum_type.cxx  interesting_functional.cxx  lazy_string_concat.cxx  lazy_val.cxx  multiowner_list.cxx  names_for.cxx  older_than_generic_func_object.cxx  optional_alias.cxx  optional_functor_map.cxx  partial_application_on_2nd.cxx  (+7 more)
handbook/: CMakeLists.txt
handbook/include/: autodocs.h  hashtable.h  main_table.h  main_window.h  rbtree.h  redblacktree.h  search_table.h  search_window.h  start_window.h  utils.h
handbook/include/core/: carspec.h  date.h  fullname.h  passport.h
handbook/src/: autodocs.cc  hashtable.cc  main.cc  main_table.cc  main_window.cc  rbtree.cc  redblacktree.cc  search_table.cc  search_window.cc  start_window.cc  utils.cc
(+97 files in other folders)
